# kairos-core

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
kairos_core/: __init__.py  config.py  enums.py  logging.py  metrics.py  metrics_server.py  topics.py
kairos_core/bus/: __init__.py  base.py  factory.py  inmemory.py  redis_streams.py
kairos_core/contracts/: __init__.py  account.py  base.py  execution.py  health.py  market.py  routing.py  sentiment.py  strategic.py  tactical.py
tests/: test_bus_inmemory.py  test_bus_redis_integration.py  test_bus_redis_reclaim.py  test_contracts.py  test_enums.py
