[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-core"
version = "0.1.0"
description = "Shared contracts, message bus, config and logging for the Kairos AI futures trader."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "TheLitis" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "structlog>=24.1",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["kairos_core"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
